--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     </style>
 </head>
 <body>
-    <h1>Adrian Rasała's Portfolio</h1>
+    <h1>Adrian's Portfolio</h1>
     <h2>I am a Junior Web Developer</h2>
     <hr>
     
