--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,3 @@
 <h1>About Me</h1>
-<p>I am working as a warehouseman right now, but in my free time im learning Web Developing. <br>
-  I hope some day i will be working as a Web Developer, i know there is a long jurney before starting new job but im doing my best to achieve this point.
-</p>
-
-<p>I am a 29yo man who learn really fast and practising as hard as i can but i still need a lot to do.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, corporis. Dolor mollitia voluptate, vel ex facere temporibus at a sequi vitae? Laborum perspiciatis vel reiciendis hic. Similique cum porro incidunt?</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur vel voluptate vero hic numquam repudiandae aperiam veniam suscipit, eaque harum architecto cumque beatae tempore dolores voluptas facere exercitationem laudantium earum?</p>
