--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +48 660-44-50-94</p>
-<p>Email: Adrian.Rasala@gmail.com</p>
+<p>Tel: </p>
+<p>Email: </p>
 <p>Address:</p>
 <p>
-  43-300 Bielsko-Biała<br />
-  Lipnicka 75<br />
-  Poland <br />
+  <br />
+  <br />
+   <br />
 </p>
